3.6.15
* map portals now take less time to break
* dmg numbers now show all elements 
* changed hud render to not break if experience isn't rendered.

3.6.14
* fix divine buffs expiring randomly after a few seconds

3.6.13
* dungeon chests now have a chance to give vanilla items that are dictated by lootables. (meaning configurable by modpack devs)
Low lvl maps give stuff like coal, mid lvl give gold, and high lvl maps can give even diamonds!
* fixed more dungeon signs
* fix stations dupe bug

3.6.12
* implemented an experimental simple way to minimize effectiveness of mob farms (ill implement configs later, first i need to see if it works)

3.6.11
* should fix mana cost reduction throwing exception on synergies that dont cost mana.

3.6.10
* starter item config is now common config

3.6.9
* trying out performance optimizations
* added ignored entities config, this stops stat data packets from being sent to client,
 should make servers less laggy as most entities are bats and fish, and you don't really care about their stats. 
 You could also add sheep for example, if you have a huge sheep farm that's laggy.
 * orb of blessing can no longer reroll unique gear's stats
 * orb of unique blessing can now only reroll them, and the instability hit is now much higher (as unique gears are much less random now, i'm toning down the amount of times you can modify them)
* made starter items a newbie gear bag instead. the bag now gives same items every time. 

3.6.8
* updated chinese lang
* added mastery descriptions by dreckz
* added 3 new divine buff spells
* removed some advancements

3.6.7
* added a new mastery: divine!
* added new fire mastery synergy
* removed deobf jar, seemed to confuse more non modders than it helped modders
* pets shouldnt take spell damage from owners anymore

3.6.6
* removed experimental map drop rate restrictions
* effective spell level is now derived from effective mastery level.
* fix death message