@@ -3,11 +3,10 @@ package com.robertx22.mine_and_slash.new_content.auto_comp;
 import com.robertx22.mine_and_slash.database.gearitemslots.bases.GearItemSlot;
 import com.robertx22.mine_and_slash.mmorpg.Ref;
 import com.robertx22.mine_and_slash.registry.SlashRegistry;
+import com.robertx22.mine_and_slash.uncommon.testing.Watch;
 import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 
 public class DeterminePowerLevels {
 
@@ -16,18 +15,25 @@ public class DeterminePowerLevels {
 
     public static void setupHashMaps() {
 
-        ForgeRegistries.ITEMS.forEach(item -> {
-            try {
-                if (item.getRegistryName() != null && !Ref.MODID.equals(item.getRegistryName()
-                    .getNamespace())) {
-                    SlashRegistry.GearTypes()
-                        .getList()
+        Watch watch = new Watch();
+
+        Set<GearItemSlot> types = new HashSet<>(SlashRegistry.GearTypes()
+            .getList());
+
+        types.forEach(x -> {
+            MAP.put(x, new ArrayList<>());
+        });
+
+        ForgeRegistries.ITEMS.getValues()
+            .stream()
+            .filter(x -> x.getRegistryName() != null && !Ref.MODID.equals(x.getRegistryName()
+                .getNamespace()))
+            .forEach(item -> {
+                try {
+
+                    types
                         .forEach(slot -> {
                             if (GearItemSlot.isGearOfThisType(slot, item)) {
-
-                                if (!MAP.containsKey(slot)) {
-                                    MAP.put(slot, new ArrayList<>());
-                                }
 
                                 PowerLevel current = new PowerLevel(item, slot);
 
@@ -44,11 +50,13 @@ public class DeterminePowerLevels {
 
                             }
                         });
+
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        });
+            });
+
+        watch.print("[Setting up auto compatibility config power levels] ");
 
     }
 }
